Modified home page, and loading mechanism

--- a/style/style.css
+++ b/style/style.css
@@ -1,32 +1,26 @@
-.header-top-left-wrapper {
-
+.header-left-wrapper {
+  display: flex;
+  align-items: center; 
 }
 
-.header-top-left-wrapper .header-top-left {
-  color: #8d5103;
+.header-left-wrapper h1{
+  font-size: 45px;
 }
 
-.header-top-right-wrapper {
-
+.header-left-wrapper .header-left {
+  color: #e31e26;
 }
 
-.header-top-right-wrapper .header-top-right {
+.header-right-wrapper {
+  text-align: right;
 }
 
-.header-bottom-left-wrapper {
-
+.header-right-wrapper .header-right {
+  padding: 10px 0px;
 }
 
-.header-bottom-left-wrapper .header-bottom-left {
-
-}
-
-.header-bottom-right-wrapper {
-
-}
-
-.header-bottom-right-wrapper .header-bottom-right {
-  
+.header-right-wrapper .header-right p {
+  margin: 0 !important;
 }
 
 .primary-color {
@@ -61,6 +55,59 @@
   text-decoration: none;
 }
 
+.navbar {
+  padding: 0px !important;
+}
+
+.nav-item .nav-link, .nav-item .nav-link:hover {
+  color: #fff !important;
+}
+
+.nav-item {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+.nav-item .nav-link {
+  padding: 1rem 1.5rem !important;
+}
+
+.nav-item:hover {
+  background-color: #FF4C4C;
+}
+
+.divider {
+  border-top: 2px dotted rgba(0,0,0,.15);
+  border-bottom: 2px dotted rgba(0,0,0,.15);
+  padding: 8px 0px;
+  text-align: center;
+  letter-spacing: .15em;
+  font-size: 13px;
+  margin: 20px 0px;
+  height: 60px;
+  color: #e31e26;
+}
+
+.map-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
+}
+
+.map-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+.custom-row {
+ padding: 0px;
+ margin: 0px;
+}
+
 .hours-wrapper .title {
   font-size: 25px;
   text-align: center;
@@ -79,4 +126,8 @@
 
 .footer-wrapper {
   text-align: center;
+}
+
+#home .map-responsive {
+  padding-bottom: 45%;
 }
