--- a/style/style.css
+++ b/style/style.css
@@ -23,6 +23,11 @@
   margin: 0 !important;
 }
 
+.navbar-toggler {
+  border: 0px;
+  color: #fff;
+}
+
 .primary-color {
   background-color: #e31e26;
 }
